--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,13 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS Core Test)
 
 # Структура проекта
 set(INCLUDE_DIR include)
 set(SOURCE_DIR src)
+set(TEST_DIR tests)
+set(TEST_PROJECT_NAME QtSpdlogTests)
 
 # Настройки spdlog
 set(SPDLOG_BUILD_EXAMPLE OFF)
@@ -30,6 +32,7 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(spdlog)
 
+# Основное приложение
 set(SOURCES
     ${SOURCE_DIR}/main.cpp
     ${SOURCE_DIR}/loggerdemo.cpp
@@ -53,19 +56,54 @@ target_include_directories(${PROJECT_NAME}
     ${INCLUDE_DIR}
 )
 
+# Тесты
+if(Qt6Test_FOUND)
+    set(TEST_SOURCES
+        ${TEST_DIR}/test_qt_spdlog.cpp
+    )
+
+    add_executable(${TEST_PROJECT_NAME} ${TEST_SOURCES})
+
+    target_link_libraries(${TEST_PROJECT_NAME}
+        Qt6::Test
+        Qt6::Core
+        spdlog::spdlog
+    )
+
+    target_include_directories(${TEST_PROJECT_NAME}
+        PRIVATE
+        ${INCLUDE_DIR}
+    )
+
+    # Добавляем тест в CTest
+    add_test(NAME ${TEST_PROJECT_NAME} COMMAND ${TEST_PROJECT_NAME})
+endif()
+
 # Настройки компилятора
 if(MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE /W4 /permissive-)
+    if(Qt6Test_FOUND)
+        target_compile_options(${TEST_PROJECT_NAME} PRIVATE /W4 /permissive-)
+    endif()
 else()
     target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
+    if(Qt6Test_FOUND)
+        target_compile_options(${TEST_PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
+    endif()
 endif()
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     target_compile_options(${PROJECT_NAME} PRIVATE -Wno-dangling-reference)
+    if(Qt6Test_FOUND)
+        target_compile_options(${TEST_PROJECT_NAME} PRIVATE -Wno-dangling-reference)
+    endif()
 endif()
 
 if(WIN32)
     target_compile_definitions(${PROJECT_NAME} PRIVATE _CRT_SECURE_NO_WARNINGS)
+    if(Qt6Test_FOUND)
+        target_compile_definitions(${TEST_PROJECT_NAME} PRIVATE _CRT_SECURE_NO_WARNINGS)
+    endif()
 
     # Использование windeployqt для развертывания Qt библиотек
     find_program(WINDEPLOYQT_EXECUTABLE windeployqt HINTS ${Qt6_DIR}/../../../bin)
